# hmpps-probation-integration-lambda-functions

./: .gitignore  CODEOWNERS  README.md
.circleci/: config.yml  continue_config.yml
pre-sentence-report-handler/: README.md  auth.py  auth_test.py  delius_api_psr_post.py  delius_api_service.py  integration_test.py  main.py  main_test.py  pre_sentence_report_service.py  pre_sentence_service.py  pyproject.toml  requirements.txt  test_event.json
workload-allocation-handler/: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  README.md  index.ts  logger.ts  package-lock.json  package.json  tsconfig.json
workload-allocation-handler/src/: allocations.ts  config.ts  handler.test.ts  handler.ts  sanitisedError.test.ts  sanitisedError.ts
workload-allocation-handler/src/data/: hmppsAuthClient.test.ts  hmppsAuthClient.ts  parameterStore.ts  restClient.ts  restClientMetricsMiddleware.test.ts
workload-allocation-handler/src/services/: deliusApi.test.ts  deliusApi.ts  hmppsWorkload.ts
workload-allocation-handler/src/utils/: azureAppInsights.ts
